--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,7 +7,7 @@ builds:
   - binary: pilot
     dir: "."
     id: pilot
-    main: ./main.go
+    main: ./main.go ./util.go
     goos:
       - linux
     goarch:
