ci: fix release workflow
Signed-off-by: gouravkrosx <gouravgreatkr@gmail.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,7 +7,7 @@ builds:
   - binary: pilot
     dir: "."
     id: pilot
-    main: ./main.go ./util.go
+    main: "./*"
     goos:
       - linux
     goarch:
