--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   build-go:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     #    needs: build-ui
     steps:
       - uses: actions/checkout@v2
